--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,7 @@ input, select, textarea {
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	appearance: none;
+	resize: none;
 }
 
 /* Basic */
